@@ -364,6 +364,8 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 27344) add drprefix param to list=deletedrevs.
 * (bug 28560) list=deletedrevs should die, if combination of param is invalid.
 * (bug 28238) paraminfo: output both limits for multi param
+* (bug 27179) API: List of extension tags through meta=siteinfo
+* Get a list of function hooks through meta=siteinfo
 
 === Languages updated in 1.18 ===
 
